[tool.poetry]
name = "chess-app"
version = "0.1.0"
description = "An app that teaches basic chess."
authors = ["jackiemalooly <99413294+jackiemalooly@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
streamlit = "^1.41.1"
autogen = "^0.6.0"
ipython = "^8.31.0"
chess = "^1.11.1"
typing-extensions = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false 
